Refactor-code-and-class-utill-add-contractor